--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
       "abstrato",
       "abstratos",
       "ação",
+      "acessá",
       "acessado",
       "acessam",
       "acima",
@@ -37,9 +38,11 @@
       "ainda",
       "Ajuda",
       "ajudam",
+      "ajudará",
       "Além",
       "algoritmo",
       "algoritmos",
+      "algorítmos",
       "alguem",
       "algum",
       "alguma",
@@ -48,6 +51,7 @@
       "alterações",
       "alterem",
       "alternativa",
+      "alunos",
       "AMARELO",
       "aninhados",
       "anos",
@@ -75,6 +79,8 @@
       "assinatura",
       "associação",
       "assumindo",
+      "atende",
+      "atinge",
       "atingem",
       "atingir",
       "através",
@@ -86,7 +92,9 @@
       "atualidade",
       "Atualmente",
       "aumenta",
+      "autenticação",
       "autores",
+      "avisos",
       "AZUL",
       "babaca",
       "baixo",
@@ -114,6 +122,7 @@
       "Camiseta",
       "Caneta",
       "capaz",
+      "caro",
       "caros",
       "carrinho",
       "caso",
@@ -121,6 +130,7 @@
       "categoria",
       "causa",
       "causar",
+      "cenários",
       "certas",
       "certeza",
       "cerveja",
@@ -133,7 +143,10 @@
       "chamar",
       "chave",
       "checar",
+      "cheio",
+      "ciclo",
       "classe",
+      "classificado",
       "clientes",
       "clonar",
       "Clonar",
@@ -144,6 +157,7 @@
       "coisa",
       "coisas",
       "colaborar",
+      "coletar",
       "começar",
       "compartilhados",
       "compartilhamento",
@@ -157,6 +171,7 @@
       "Compor",
       "comportamentais",
       "comportamento",
+      "comportamentos",
       "comportar",
       "composição",
       "composições",
@@ -173,9 +188,11 @@
       "concreta",
       "concretos",
       "Condicional",
+      "conexão",
       "configuração",
       "configurado",
       "configurando",
+      "confundido",
       "conhece",
       "conhecimento",
       "conjunto",
@@ -193,8 +210,11 @@
       "contem",
       "conter",
       "contrato",
+      "controla",
+      "controladas",
       "controlado",
       "controlar",
+      "controle",
       "convencional",
       "conversão",
       "converte",
@@ -213,6 +233,7 @@
       "criados",
       "criamos",
       "criar",
+      "criatividade",
       "crie",
       "cuidado",
       "Cuidados",
@@ -261,6 +282,7 @@
       "descritor",
       "desejada",
       "desejadas",
+      "desejado",
       "desejar",
       "desenvolvimento",
       "dessa",
@@ -269,6 +291,8 @@
       "Destilando",
       "desvantagens",
       "detalham",
+      "detalhando",
+      "determinadas",
       "determinado",
       "determinar",
       "deve",
@@ -281,16 +305,22 @@
       "diante",
       "dicionário",
       "diferença",
+      "Diferenças",
       "diferente",
+      "Diferentemente",
       "diferentes",
       "difícil",
       "digitado",
       "dinamicamente",
+      "direcionar",
       "diretamente",
+      "direto",
       "discontos",
       "dispersão",
+      "disponibilizar",
       "disponível",
       "disso",
+      "distribuir",
       "diversas",
       "dividir",
       "dizendo",
@@ -306,6 +336,7 @@
       "eles",
       "eliminar",
       "Encadeamento",
+      "encaminha",
       "encaminhados",
       "encaminhar",
       "Encaminhe",
@@ -322,12 +353,15 @@
       "entender",
       "entendimento",
       "Entidades",
+      "entrada",
       "entrevista",
       "enviada",
+      "enviadas",
       "enviado",
       "enviados",
       "Enviar",
       "erro",
+      "erros",
       "escolhe",
       "escrito",
       "especificar",
@@ -355,6 +389,7 @@
       "estaticos",
       "estendem",
       "estender",
+      "estiver",
       "estranho",
       "estrutura",
       "estruturada",
@@ -365,7 +400,10 @@
       "evitar",
       "evoluir",
       "exatamente",
+      "excluir",
       "execução",
+      "execuções",
+      "executa",
       "executado",
       "executam",
       "Exemplo",
@@ -385,7 +423,12 @@
       "Faça",
       "Façade",
       "façam",
+      "fachada",
+      "Fachada",
+      "fachadas",
       "fácil",
+      "Facilita",
+      "facilitar",
       "facilmente",
       "falta",
       "família",
@@ -403,6 +446,8 @@
       "fina",
       "finais",
       "finge",
+      "fingir",
+      "fingirá",
       "flexibilidade",
       "flexível",
       "foca",
@@ -424,6 +469,7 @@
       "Fornecer",
       "fossem",
       "função",
+      "funciona",
       "funcionalidade",
       "funcionalidades",
       "funcionam",
@@ -447,6 +493,7 @@
       "hierarquias",
       "hierarquicamente",
       "idade",
+      "ideia",
       "idêntico",
       "identicos",
       "identidade",
@@ -469,11 +516,14 @@
       "impraticável",
       "impressão",
       "imutável",
+      "incluir",
       "incompatíveis",
       "incompatível",
+      "inconveniente",
       "incorretos",
       "independente",
       "independentemente",
+      "indesejável",
       "indice",
       "individuais",
       "inferência",
@@ -481,24 +531,30 @@
       "inferir",
       "infinitamente",
       "infinito",
+      "informações",
       "ingencao",
+      "iniciar",
       "injecao",
       "inofensivo",
       "instancia",
       "instância",
       "instanciação",
+      "instanciações",
       "instanciado",
       "instanciados",
       "instanciar",
       "instâncias",
       "inteira",
       "inteiro",
+      "inteligente",
       "intenção",
       "Intenção",
       "intenções",
+      "interessante",
       "interesse",
       "interfacer",
       "interseção",
+      "Introduz",
       "introduzida",
       "introduzir",
       "invalida",
@@ -506,6 +562,7 @@
       "inversão",
       "invés",
       "iremos",
+      "Isola",
       "isso",
       "janela",
       "Janela",
@@ -519,6 +576,7 @@
       "lida",
       "lidamos",
       "liga",
+      "ligação",
       "ligar",
       "limpo",
       "linguagem",
@@ -526,6 +584,7 @@
       "literais",
       "livro",
       "locais",
+      "localização",
       "lógica",
       "lógicas",
       "lugar",
@@ -538,6 +597,7 @@
       "maneiras",
       "manter",
       "mãos",
+      "máquina",
       "marcador",
       "meio",
       "melhor",
@@ -554,9 +614,11 @@
       "método",
       "metodos",
       "métodos",
+      "meus",
       "Minecraft",
       "minha",
       "Minhas",
+      "minimizar",
       "misturem",
       "modificação",
       "modificadores",
@@ -581,6 +643,7 @@
       "necessário",
       "necessidade",
       "necessita",
+      "necessitar",
       "negocio",
       "nenhum",
       "nessa",
@@ -611,6 +674,7 @@
       "ocorrer",
       "Oculta",
       "ocultam",
+      "ocultar",
       "Oliveira",
       "omitido",
       "onde",
@@ -618,6 +682,7 @@
       "opcional",
       "opcoes",
       "operacionais",
+      "operacional",
       "Operador",
       "ordenada",
       "originais",
@@ -636,8 +701,10 @@
       "parametros",
       "parâmetros",
       "parece",
+      "parecidas",
       "parecido",
       "partes",
+      "passar",
       "pede",
       "pedindo",
       "pegando",
@@ -647,27 +714,35 @@
       "Perceba",
       "percebe",
       "perceber",
+      "permissão",
       "permita",
       "permite",
       "permitindo",
       "permitir",
       "persistencia",
+      "persistente",
       "pessoa",
       "pode",
       "podem",
       "podemos",
+      "poderá",
       "poderão",
+      "poderiam",
       "poderíamos",
       "pois",
       "polimórfica",
       "polimorfismo",
+      "poluir",
       "ponta",
+      "pontos",
       "Porém",
       "porque",
       "portanto",
       "posicao",
+      "posicionando",
       "possa",
       "possam",
+      "possibilidades",
       "possíveis",
       "possível",
       "posso",
@@ -681,6 +756,7 @@
       "precisarão",
       "preço",
       "preferir",
+      "preocupado",
       "preocupam",
       "primeiro",
       "princípio",
@@ -698,6 +774,7 @@
       "programas",
       "projetada",
       "projetadas",
+      "projetado",
       "projeto",
       "própria",
       "propriedade",
@@ -705,6 +782,7 @@
       "PROPRIEDADE",
       "proprio",
       "próprios",
+      "proteção",
       "protocolo",
       "prototípica",
       "prototipo",
@@ -729,11 +807,14 @@
       "Rafaela",
       "raiz",
       "raros",
+      "reais",
+      "realizadas",
       "realizam",
       "realizar",
       "realmente",
       "recebe",
       "recebendo",
+      "receberá",
       "recebi",
       "Recomendado",
       "recomendável",
@@ -741,6 +822,7 @@
       "recuperado",
       "recuperamos",
       "recursão",
+      "recursiva",
       "recursos",
       "reescrever",
       "refatorar",
@@ -749,9 +831,14 @@
       "referências",
       "refinadas",
       "refinindo",
+      "refletem",
       "refrigerante",
       "regra",
       "relacionados",
+      "remota",
+      "remoto",
+      "Remoto",
+      "remotos",
       "Repetir",
       "representa",
       "representação",
@@ -771,8 +858,10 @@
       "responsabilidade",
       "responsabilidades",
       "responsável",
+      "ressaltar",
       "restrição",
       "restrições",
+      "restrito",
       "retorna",
       "retornados",
       "retornam",
@@ -792,6 +881,7 @@
       "seguros",
       "seja",
       "sejam",
+      "semelhantes",
       "sendo",
       "senha",
       "sensiveis",
@@ -808,7 +898,11 @@
       "serem",
       "seria",
       "seriam",
+      "serviços",
+      "servidores",
       "servir",
+      "setor",
+      "setores",
       "seus",
       "sido",
       "significa",
@@ -822,6 +916,7 @@
       "sobre",
       "sobrenome",
       "sobrescrito",
+      "solicitações",
       "solução",
       "sombra",
       "somente",
@@ -830,6 +925,7 @@
       "subsistema",
       "substituir",
       "substituiveis",
+      "substituto",
       "subtipos",
       "sucesso",
       "sugere",
@@ -842,6 +938,7 @@
       "também",
       "tarefa",
       "tarefas",
+      "telefones",
       "temos",
       "tendem",
       "tendo",
@@ -871,6 +968,7 @@
       "todos",
       "torna",
       "tornar",
+      "torne",
       "totalmente",
       "trabalhe",
       "trabalhem",
@@ -878,6 +976,7 @@
       "transferido",
       "transforma",
       "transformar",
+      "transmissão",
       "Trata",
       "tratamento",
       "tratar",
@@ -890,6 +989,8 @@
       "único",
       "unidade",
       "unifica",
+      "unificada",
+      "unificar",
       "uniforme",
       "usada",
       "usadas",
