--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,7 @@
       "botão",
       "Botão",
       "botar",
+      "buscar",
       "Cachorro",
       "cada",
       "cadastro",
@@ -387,6 +388,7 @@
       "estático",
       "ESTÁTICO",
       "estaticos",
+      "esteja",
       "estendem",
       "estender",
       "estiver",
@@ -440,6 +442,7 @@
       "fazermos",
       "fechadas",
       "fechado",
+      "feito",
       "Feliz",
       "filha",
       "filhos",
@@ -901,6 +904,7 @@
       "serviços",
       "servidores",
       "servir",
+      "setado",
       "setor",
       "setores",
       "seus",
