--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,8 +53,10 @@
       "alternativa",
       "alunos",
       "AMARELO",
+      "analisar",
       "aninhados",
       "anos",
+      "anteriormente",
       "antigo",
       "aparecendo",
       "apelido",
@@ -72,6 +74,7 @@
       "aqui",
       "argumento",
       "argumentos",
+      "armazenamento",
       "armazenar",
       "arquivos",
       "árvore",
@@ -94,15 +97,18 @@
       "aumenta",
       "autenticação",
       "autores",
+      "Avenida",
       "avisos",
       "AZUL",
       "babaca",
+      "bairro",
       "baixo",
       "barra",
       "barras",
       "baseado",
       "basicamente",
       "básicos",
+      "bastante",
       "behavioural",
       "Bernardão",
       "biblioteca",
@@ -134,6 +140,7 @@
       "cenários",
       "certas",
       "certeza",
+      "certifique",
       "cerveja",
       "chama",
       "chamada",
@@ -146,6 +153,7 @@
       "checar",
       "cheio",
       "ciclo",
+      "cidade",
       "classe",
       "classificado",
       "clientes",
@@ -160,9 +168,12 @@
       "colaborar",
       "coletar",
       "começar",
+      "comigo",
+      "compartilhado",
       "compartilhados",
       "compartilhamento",
       "compatíveis",
+      "complemento",
       "completa",
       "Completo",
       "complexa",
@@ -188,7 +199,9 @@
       "concorrência",
       "concreta",
       "concretos",
+      "condição",
       "Condicional",
+      "condições",
       "conexão",
       "configuração",
       "configurado",
@@ -201,15 +214,19 @@
       "conseguir",
       "Consequências",
       "constante",
+      "constantemente",
       "construção",
       "construir",
       "construtor",
       "construtores",
+      "consumir",
       "Conta",
       "contando",
       "contar",
       "contem",
       "conter",
+      "contexto",
+      "contrário",
       "contrato",
       "controla",
       "controladas",
@@ -285,10 +302,13 @@
       "desejadas",
       "desejado",
       "desejar",
+      "desempenho",
       "desenvolvimento",
+      "desnecessária",
       "dessa",
       "desse",
       "desses",
+      "deste",
       "Destilando",
       "desvantagens",
       "detalham",
@@ -330,7 +350,9 @@
       "domínio",
       "Duas",
       "duplicação",
+      "economiza",
       "eficiente",
+      "eficientemente",
       "elas",
       "elemento",
       "elementos",
@@ -355,6 +377,7 @@
       "entendimento",
       "Entidades",
       "entrada",
+      "entrega",
       "entrevista",
       "enviada",
       "enviadas",
@@ -365,6 +388,8 @@
       "erros",
       "escolhe",
       "escrito",
+      "especie",
+      "específica",
       "especificar",
       "Especificar",
       "específico",
@@ -375,12 +400,14 @@
       "Essa",
       "Essas",
       "está",
+      "estados",
       "estamos",
       "estampa",
       "estampada",
       "estao",
       "estão",
       "estar",
+      "estará",
       "Estatica",
       "estática",
       "ESTÁTICA",
@@ -420,6 +447,8 @@
       "externas",
       "externo",
       "externos",
+      "extrínseco",
+      "extrínsecos",
       "fábrica",
       "fábricas",
       "Faça",
@@ -444,6 +473,7 @@
       "fechado",
       "feito",
       "Feliz",
+      "fictício",
       "filha",
       "filhos",
       "fina",
@@ -462,6 +492,7 @@
       "folha",
       "força",
       "forcados",
+      "forem",
       "formada",
       "formam",
       "formar",
@@ -482,6 +513,7 @@
       "Garantir",
       "geral",
       "gerar",
+      "gerenciado",
       "globais",
       "gráfica",
       "gráficas",
@@ -557,9 +589,12 @@
       "interesse",
       "interfacer",
       "interseção",
+      "intrínseco",
       "Introduz",
       "introduzida",
       "introduzir",
+      "intuitiva",
+      "intuitivo",
       "invalida",
       "inválido",
       "inversão",
@@ -576,6 +611,7 @@
       "lado",
       "legado",
       "leite",
+      "liberar",
       "lida",
       "lidamos",
       "liga",
@@ -598,6 +634,8 @@
       "mais",
       "maneira",
       "maneiras",
+      "mantém",
+      "mantenha",
       "manter",
       "mãos",
       "máquina",
@@ -605,6 +643,7 @@
       "meio",
       "melhor",
       "membros",
+      "memória",
       "mencionei",
       "mencionou",
       "menos",
@@ -630,8 +669,11 @@
       "Modulos",
       "módulos",
       "mostra",
+      "mostrando",
       "motivo",
+      "movidos",
       "muda",
+      "mudam",
       "mudar",
       "muita",
       "muitas",
@@ -690,6 +732,7 @@
       "ordenada",
       "originais",
       "Otávio",
+      "otimização",
       "outra",
       "outros",
       "padrão",
@@ -710,6 +753,7 @@
       "passar",
       "pede",
       "pedindo",
+      "Pedrao",
       "pegando",
       "pela",
       "pelo",
@@ -752,11 +796,14 @@
       "possuam",
       "possuem",
       "postergar",
+      "poucas",
+      "poucos",
       "prática",
       "precisa",
       "precisar",
       "precisará",
       "precisarão",
+      "precisaremos",
       "preço",
       "preferir",
       "preocupado",
@@ -784,6 +831,7 @@
       "Propriedade",
       "PROPRIEDADE",
       "proprio",
+      "próprio",
       "próprios",
       "proteção",
       "protocolo",
@@ -815,11 +863,14 @@
       "realizam",
       "realizar",
       "realmente",
+      "receba",
       "recebe",
       "recebendo",
       "receberá",
       "recebi",
+      "Recomenda",
       "Recomendado",
+      "recomendam",
       "recomendável",
       "recriação",
       "recuperado",
@@ -862,6 +913,7 @@
       "responsabilidades",
       "responsável",
       "ressaltar",
+      "restante",
       "restrição",
       "restrições",
       "restrito",
@@ -878,9 +930,11 @@
       "ROXO",
       "ruim",
       "sabemos",
+      "salva",
       "salvando",
       "segregação",
       "seguinte",
+      "seguintes",
       "seguros",
       "seja",
       "sejam",
@@ -895,6 +949,7 @@
       "separadas",
       "separado",
       "Separar",
+      "separe",
       "Seperação",
       "será",
       "serão",
@@ -916,6 +971,7 @@
       "simultaneamente",
       "sinal",
       "sistemas",
+      "situação",
       "sobrar",
       "sobre",
       "sobrenome",
@@ -927,6 +983,7 @@
       "souber",
       "suas",
       "subsistema",
+      "substituídos",
       "substituir",
       "substituiveis",
       "substituto",
@@ -996,6 +1053,7 @@
       "unificada",
       "unificar",
       "uniforme",
+      "unir",
       "usada",
       "usadas",
       "usado",
@@ -1015,6 +1073,7 @@
       "Vantagens",
       "vantajoso",
       "variações",
+      "variando",
       "variantes",
       "variar",
       "várias",
@@ -1026,9 +1085,12 @@
       "vazio",
       "Veja",
       "verdade",
+      "verdadeiras",
+      "verifica",
       "verifique",
       "Vermelha",
       "VERMELHO",
+      "vermos",
       "vetor",
       "vezes",
       "vídeo",
