strategy and behavioural

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,10 +16,13 @@
       "acessá",
       "acessado",
       "acessam",
+      "acessar",
       "acima",
       "ações",
       "acompanhe",
       "acontecer",
+      "acoplamento",
+      "acordo",
       "adaptação",
       "adaptado",
       "adaptador",
@@ -30,10 +33,14 @@
       "adiar",
       "adiciona",
       "adicionais",
+      "adicional",
       "adicionando",
       "adicionar",
       "adicione",
+      "adquiridos",
       "adulto",
+      "afastam",
+      "agregado",
       "Agregar",
       "ainda",
       "Ajuda",
@@ -49,6 +56,7 @@
       "alguns",
       "altera",
       "alterações",
+      "altere",
       "alterem",
       "alternativa",
       "alunos",
@@ -57,6 +65,7 @@
       "aninhados",
       "anos",
       "anteriormente",
+      "antiga",
       "antigo",
       "aparecendo",
       "apelido",
@@ -67,7 +76,9 @@
       "aplicacao",
       "aplicação",
       "aplicada",
+      "aplicadas",
       "aplicado",
+      "aplicando",
       "aplicar",
       "aplique",
       "após",
@@ -88,14 +99,18 @@
       "atingir",
       "através",
       "atribui",
+      "atribuição",
       "atribuidos",
       "atributo",
       "atributos",
       "atual",
       "atualidade",
+      "atualizados",
       "Atualmente",
       "aumenta",
+      "aumentar",
       "autenticação",
+      "automaticamente",
       "autores",
       "Avenida",
       "avisos",
@@ -108,7 +123,9 @@
       "baseado",
       "basicamente",
       "básicos",
+      "basta",
       "bastante",
+      "bastasse",
       "behavioural",
       "Bernardão",
       "biblioteca",
@@ -120,6 +137,7 @@
       "Cachorro",
       "cada",
       "cadastro",
+      "cadeia",
       "cadeias",
       "caixa",
       "caixas",
@@ -129,6 +147,8 @@
       "Camiseta",
       "Caneta",
       "capaz",
+      "captura",
+      "caracterizam",
       "caro",
       "caros",
       "carrinho",
@@ -141,6 +161,7 @@
       "certas",
       "certeza",
       "certifique",
+      "certos",
       "cerveja",
       "chama",
       "chamada",
@@ -168,6 +189,7 @@
       "colaborar",
       "coletar",
       "começar",
+      "comentar",
       "comigo",
       "compartilhado",
       "compartilhados",
@@ -182,6 +204,7 @@
       "complexos",
       "Compor",
       "comportamentais",
+      "Comportamental",
       "comportamento",
       "comportamentos",
       "comportar",
@@ -193,21 +216,29 @@
       "compra",
       "comprados",
       "comprar",
+      "compras",
+      "compre",
       "computa",
       "comum",
+      "comunicação",
+      "conceito",
       "conceitos",
+      "concentre",
       "concorrência",
       "concreta",
       "concretos",
       "condição",
+      "condicionais",
       "Condicional",
       "condições",
       "conexão",
+      "Configura",
       "configuração",
       "configurado",
       "configurando",
       "confundido",
       "conhece",
+      "conhecer",
       "conhecimento",
       "conjunto",
       "conseguimos",
@@ -226,6 +257,7 @@
       "contem",
       "conter",
       "contexto",
+      "continuamos",
       "contrário",
       "contrato",
       "controla",
@@ -256,6 +288,7 @@
       "cuidado",
       "Cuidados",
       "custumer",
+      "dando",
       "decidam",
       "decidirem",
       "Declarar",
@@ -264,6 +297,7 @@
       "decorar",
       "Defina",
       "definem",
+      "definição",
       "definido",
       "definimos",
       "Definir",
@@ -293,6 +327,9 @@
       "Desacopla",
       "desacoplamento",
       "desacoplar",
+      "desconto",
+      "descontos",
+      "descrevem",
       "descrevendo",
       "descrição",
       "descrita",
@@ -304,12 +341,15 @@
       "desejar",
       "desempenho",
       "desenvolvimento",
+      "desfeitas",
       "desnecessária",
       "dessa",
       "desse",
       "desses",
+      "desta",
       "deste",
       "Destilando",
+      "destinatário",
       "desvantagens",
       "detalham",
       "detalhando",
@@ -318,6 +358,7 @@
       "determinar",
       "deve",
       "devem",
+      "devemos",
       "deverá",
       "deveria",
       "deveriam",
@@ -330,6 +371,7 @@
       "diferente",
       "Diferentemente",
       "diferentes",
+      "difíceis",
       "difícil",
       "digitado",
       "dinamicamente",
@@ -350,6 +392,7 @@
       "domínio",
       "Duas",
       "duplicação",
+      "ecommerce",
       "economiza",
       "eficiente",
       "eficientemente",
@@ -359,16 +402,22 @@
       "eles",
       "eliminar",
       "Encadeamento",
+      "Encadeia",
       "encaminha",
       "encaminhados",
       "encaminhar",
       "Encaminhe",
+      "encapsula",
+      "encapsulação",
       "encapsulam",
       "encapsulamento",
+      "encapsular",
       "encontrar",
       "endereco",
       "endereço",
+      "enfileire",
       "Enfim",
+      "enquanto",
       "entanto",
       "então",
       "entenda",
@@ -384,6 +433,7 @@
       "enviado",
       "enviados",
       "Enviar",
+      "época",
       "erro",
       "erros",
       "escolhe",
@@ -396,6 +446,8 @@
       "especificos",
       "espera",
       "esperada",
+      "esporadicamente",
+      "esqueleto",
       "esquerdo",
       "Essa",
       "Essas",
@@ -420,6 +472,8 @@
       "estender",
       "estiver",
       "estranho",
+      "estratégia",
+      "estratégias",
       "estrutura",
       "estruturada",
       "estruturais",
@@ -433,6 +487,7 @@
       "execução",
       "execuções",
       "executa",
+      "executada",
       "executado",
       "executam",
       "Exemplo",
@@ -441,9 +496,12 @@
       "Existe",
       "existem",
       "existente",
+      "explicitamente",
       "explosão",
+      "expor",
       "extenderem",
       "extensão",
+      "externaliza",
       "externas",
       "externo",
       "externos",
@@ -465,6 +523,7 @@
       "família",
       "famílias",
       "favorita",
+      "fazê",
       "fazem",
       "fazemos",
       "fazer",
@@ -483,6 +542,8 @@
       "fingirá",
       "flexibilidade",
       "flexível",
+      "fluxo",
+      "fluxos",
       "foca",
       "focamos",
       "foco",
@@ -490,6 +551,7 @@
       "FODAAAAAAAA",
       "Fodões",
       "folha",
+      "foram",
       "força",
       "forcados",
       "forem",
@@ -502,6 +564,7 @@
       "fornecer",
       "Fornecer",
       "fossem",
+      "fraco",
       "função",
       "funciona",
       "funcionalidade",
@@ -510,6 +573,7 @@
       "funcionar",
       "funcionarem",
       "gancho",
+      "ganhe",
       "Garantir",
       "geral",
       "gerar",
@@ -518,15 +582,18 @@
       "gráfica",
       "gráficas",
       "gráficos",
+      "gramática",
       "grandes",
       "granularidade",
       "grupos",
+      "guardar",
       "herança",
       "Heranças",
       "herda",
       "hierarquia",
       "hierarquias",
       "hierarquicamente",
+      "houver",
       "idade",
       "ideia",
       "idêntico",
@@ -543,6 +610,7 @@
       "implementando",
       "implementar",
       "implementem",
+      "implementemos",
       "importa",
       "importando",
       "importante",
@@ -568,6 +636,7 @@
       "infinito",
       "informações",
       "ingencao",
+      "INGÊNUA",
       "iniciar",
       "injecao",
       "inofensivo",
@@ -585,9 +654,16 @@
       "intenção",
       "Intenção",
       "intenções",
+      "interações",
+      "interage",
+      "intercambiáveis",
+      "interconectados",
       "interessante",
       "interesse",
       "interfacer",
+      "interno",
+      "interpretador",
+      "interpretar",
       "interseção",
       "intrínseco",
       "Introduz",
@@ -601,6 +677,7 @@
       "invés",
       "iremos",
       "Isola",
+      "isolar",
       "isso",
       "janela",
       "Janela",
@@ -608,6 +685,7 @@
       "Joana",
       "João",
       "jogar",
+      "juntamente",
       "lado",
       "legado",
       "leite",
@@ -626,6 +704,7 @@
       "localização",
       "lógica",
       "lógicas",
+      "longo",
       "lugar",
       "Luiz",
       "maior",
@@ -661,6 +740,7 @@
       "minha",
       "Minhas",
       "minimizar",
+      "mínimo",
       "misturem",
       "modificação",
       "modificadores",
@@ -673,6 +753,7 @@
       "motivo",
       "movidos",
       "muda",
+      "mudado",
       "mudam",
       "mudar",
       "muita",
@@ -690,9 +771,12 @@
       "necessita",
       "necessitar",
       "negocio",
+      "negócio",
       "nenhum",
+      "nenhuma",
       "nessa",
       "Nesse",
+      "nesta",
       "nivel",
       "nível",
       "nomes",
@@ -701,6 +785,7 @@
       "nossa",
       "nosso",
       "nossos",
+      "notificados",
       "nula",
       "nulo",
       "numa",
@@ -726,8 +811,10 @@
       "opção",
       "opcional",
       "opcoes",
+      "operação",
       "operacionais",
       "operacional",
+      "operações",
       "Operador",
       "ordenada",
       "originais",
@@ -747,10 +834,14 @@
       "parametros",
       "parâmetros",
       "parece",
+      "parecerá",
       "parecidas",
       "parecido",
       "partes",
+      "partir",
+      "passa",
       "passar",
+      "passos",
       "pede",
       "pedindo",
       "Pedrao",
@@ -758,6 +849,8 @@
       "pela",
       "pelo",
       "pelos",
+      "pensar",
+      "penso",
       "Perceba",
       "percebe",
       "perceber",
@@ -795,7 +888,9 @@
       "posso",
       "possuam",
       "possuem",
+      "postergando",
       "postergar",
+      "posteriormente",
       "poucas",
       "poucos",
       "prática",
@@ -804,6 +899,7 @@
       "precisará",
       "precisarão",
       "precisaremos",
+      "precisarmos",
       "preço",
       "preferir",
       "preocupado",
@@ -821,11 +917,16 @@
       "programa",
       "programação",
       "programador",
+      "programadores",
       "programas",
       "projetada",
       "projetadas",
       "projetado",
       "projeto",
+      "promoção",
+      "Promoção",
+      "promoções",
+      "promove",
       "própria",
       "propriedade",
       "Propriedade",
@@ -855,6 +956,7 @@
       "quebrou",
       "queremos",
       "quiser",
+      "quiséssemos",
       "Rafaela",
       "raiz",
       "raros",
@@ -868,6 +970,7 @@
       "recebendo",
       "receberá",
       "recebi",
+      "receptores",
       "Recomenda",
       "Recomendado",
       "recomendam",
@@ -878,6 +981,7 @@
       "recursão",
       "recursiva",
       "recursos",
+      "redefinam",
       "reescrever",
       "refatorar",
       "refeitos",
@@ -885,10 +989,13 @@
       "referências",
       "refinadas",
       "refinindo",
+      "refiram",
       "refletem",
       "refrigerante",
+      "registre",
       "regra",
       "relacionados",
+      "remetente",
       "remota",
       "remoto",
       "Remoto",
@@ -914,10 +1021,13 @@
       "responsável",
       "ressaltar",
       "restante",
+      "restaurado",
       "restrição",
       "restrições",
       "restrito",
+      "resultado",
       "retorna",
+      "retorná",
       "retornados",
       "retornam",
       "Retornando",
@@ -943,6 +1053,7 @@
       "senha",
       "sensiveis",
       "senso",
+      "sentenças",
       "sentido",
       "Separa",
       "separação",
@@ -951,6 +1062,7 @@
       "Separar",
       "separe",
       "Seperação",
+      "sequencialmente",
       "será",
       "serão",
       "serem",
@@ -976,12 +1088,14 @@
       "sobre",
       "sobrenome",
       "sobrescrito",
+      "solicitação",
       "solicitações",
       "solução",
       "sombra",
       "somente",
       "souber",
       "suas",
+      "subjacente",
       "subsistema",
       "substituídos",
       "substituir",
@@ -992,6 +1106,7 @@
       "sugere",
       "supermercado",
       "suportar",
+      "suporte",
       "sustenta",
       "tabela",
       "talvez",
@@ -1023,6 +1138,7 @@
       "Tipos",
       "tira",
       "tirando",
+      "tiver",
       "tocar",
       "toda",
       "todas",
@@ -1044,6 +1160,7 @@
       "tratarem",
       "trate",
       "trecho",
+      "Troca",
       "tudo",
       "unica",
       "única",
@@ -1070,6 +1187,8 @@
       "utilizam",
       "utilizar",
       "validação",
+      "vamos",
+      "Vamos",
       "Vantagens",
       "vantajoso",
       "variações",
@@ -1084,6 +1203,7 @@
       "vários",
       "vazio",
       "Veja",
+      "vendas",
       "verdade",
       "verdadeiras",
       "verifica",
@@ -1095,6 +1215,7 @@
       "vezes",
       "vídeo",
       "vídeos",
+      "violar",
       "visto",
       "Você",
       "votacao",
