--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
       "adquiridos",
       "adulto",
       "afastam",
+      "agendar",
       "agregado",
       "Agregar",
       "ainda",
@@ -188,6 +189,8 @@
       "coisas",
       "colaborar",
       "coletar",
+      "comando",
+      "comandos",
       "começar",
       "comentar",
       "comigo",
@@ -283,6 +286,7 @@
       "criados",
       "criamos",
       "criar",
+      "criaríamos",
       "criatividade",
       "crie",
       "cuidado",
@@ -335,12 +339,14 @@
       "descrita",
       "descrito",
       "descritor",
+      "deseja",
       "desejada",
       "desejadas",
       "desejado",
       "desejar",
       "desempenho",
       "desenvolvimento",
+      "desfazer",
       "desfeitas",
       "desnecessária",
       "dessa",
@@ -373,6 +379,7 @@
       "diferentes",
       "difíceis",
       "difícil",
+      "digamos",
       "digitado",
       "dinamicamente",
       "direcionar",
@@ -415,6 +422,7 @@
       "encontrar",
       "endereco",
       "endereço",
+      "enfileirar",
       "enfileire",
       "Enfim",
       "enquanto",
@@ -428,6 +436,7 @@
       "entrada",
       "entrega",
       "entrevista",
+      "envia",
       "enviada",
       "enviadas",
       "enviado",
@@ -519,6 +528,7 @@
       "Facilita",
       "facilitar",
       "facilmente",
+      "falando",
       "falta",
       "família",
       "famílias",
@@ -530,6 +540,8 @@
       "fazermos",
       "fechadas",
       "fechado",
+      "feita",
+      "feitas",
       "feito",
       "Feliz",
       "fictício",
@@ -781,6 +793,7 @@
       "nível",
       "nomes",
       "Nomes",
+      "normais",
       "Normalmente",
       "nossa",
       "nosso",
@@ -817,6 +830,7 @@
       "operações",
       "Operador",
       "ordenada",
+      "orientada",
       "originais",
       "Otávio",
       "otimização",
@@ -882,6 +896,7 @@
       "posicionando",
       "possa",
       "possam",
+      "possibilidade",
       "possibilidades",
       "possíveis",
       "possível",
@@ -994,6 +1009,7 @@
       "refrigerante",
       "registre",
       "regra",
+      "relacionado",
       "relacionados",
       "remetente",
       "remota",
@@ -1039,6 +1055,7 @@
       "revelar",
       "ROXO",
       "ruim",
+      "sabe",
       "sabemos",
       "salva",
       "salvando",
@@ -1088,6 +1105,7 @@
       "sobre",
       "sobrenome",
       "sobrescrito",
+      "solicita",
       "solicitação",
       "solicitações",
       "solução",
@@ -1105,6 +1123,7 @@
       "sucesso",
       "sugere",
       "supermercado",
+      "Suponha",
       "suportar",
       "suporte",
       "sustenta",
@@ -1114,6 +1133,7 @@
       "também",
       "tarefa",
       "tarefas",
+      "tela",
       "telefones",
       "temos",
       "tendem",
@@ -1211,6 +1231,7 @@
       "Vermelha",
       "VERMELHO",
       "vermos",
+      "versão",
       "vetor",
       "vezes",
       "vídeo",
