--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
       "acessar",
       "acima",
       "ações",
+      "acompanhar",
       "acompanhe",
       "acontecer",
       "acoplamento",
@@ -54,6 +55,7 @@
       "alguem",
       "algum",
       "alguma",
+      "algumas",
       "alguns",
       "altera",
       "alterações",
@@ -89,6 +91,7 @@
       "armazenamento",
       "armazenar",
       "arquivos",
+      "artifícios",
       "árvore",
       "assim",
       "assinatura",
@@ -247,6 +250,8 @@
       "conseguimos",
       "conseguir",
       "Consequências",
+      "consiga",
+      "consistência",
       "constante",
       "constantemente",
       "construção",
@@ -254,6 +259,7 @@
       "construtor",
       "construtores",
       "consumir",
+      "consumo",
       "Conta",
       "contando",
       "contar",
@@ -331,6 +337,7 @@
       "Desacopla",
       "desacoplamento",
       "desacoplar",
+      "desafiador",
       "desconto",
       "descontos",
       "descrevem",
@@ -348,6 +355,7 @@
       "desenvolvimento",
       "desfazer",
       "desfeitas",
+      "desfeito",
       "desnecessária",
       "dessa",
       "desse",
@@ -401,6 +409,7 @@
       "duplicação",
       "ecommerce",
       "economiza",
+      "edicao",
       "eficiente",
       "eficientemente",
       "elas",
@@ -446,6 +455,7 @@
       "erro",
       "erros",
       "escolhe",
+      "escolhida",
       "escrito",
       "especie",
       "específica",
@@ -469,6 +479,7 @@
       "estão",
       "estar",
       "estará",
+      "estaríamos",
       "Estatica",
       "estática",
       "ESTÁTICA",
@@ -590,6 +601,7 @@
       "geral",
       "gerar",
       "gerenciado",
+      "gerenciar",
       "globais",
       "gráfica",
       "gráficas",
@@ -612,6 +624,7 @@
       "identicos",
       "identidade",
       "ignorado",
+      "imagens",
       "implementa",
       "Implementação",
       "implementações",
@@ -725,6 +738,7 @@
       "mais",
       "maneira",
       "maneiras",
+      "manipule",
       "mantém",
       "mantenha",
       "manter",
@@ -767,6 +781,7 @@
       "muda",
       "mudado",
       "mudam",
+      "mudanças",
       "mudar",
       "muita",
       "muitas",
@@ -831,6 +846,7 @@
       "Operador",
       "ordenada",
       "orientada",
+      "originadoras",
       "originais",
       "Otávio",
       "otimização",
@@ -919,11 +935,13 @@
       "preferir",
       "preocupado",
       "preocupam",
+      "prevenir",
       "primeiro",
       "princípio",
       "principios",
       "princípios",
       "privado",
+      "privados",
       "problema",
       "problemas",
       "processo",
@@ -957,6 +975,8 @@
       "protótipos",
       "publicados",
       "público",
+      "públicos",
+      "quaisquer",
       "qualquer",
       "Qualquer",
       "quantas",
@@ -993,12 +1013,14 @@
       "recriação",
       "recuperado",
       "recuperamos",
+      "recuperar",
       "recursão",
       "recursiva",
       "recursos",
       "redefinam",
       "reescrever",
       "refatorar",
+      "refazer",
       "refeitos",
       "referência",
       "referências",
@@ -1037,7 +1059,10 @@
       "responsável",
       "ressaltar",
       "restante",
+      "restaurá",
       "restaurado",
+      "restaurados",
+      "restaurar",
       "restrição",
       "restrições",
       "restrito",
@@ -1097,6 +1122,7 @@
       "simbolo",
       "similares",
       "simplesmente",
+      "simplificação",
       "simultaneamente",
       "sinal",
       "sistemas",
@@ -1109,6 +1135,7 @@
       "solicitação",
       "solicitações",
       "solução",
+      "solucionar",
       "sombra",
       "somente",
       "souber",
@@ -1145,6 +1172,7 @@
       "terceiros",
       "terei",
       "terem",
+      "teria",
       "teríamos",
       "termos",
       "testado",
@@ -1163,6 +1191,7 @@
       "toda",
       "todas",
       "todos",
+      "tomar",
       "torna",
       "tornar",
       "torne",
@@ -1236,6 +1265,7 @@
       "vezes",
       "vídeo",
       "vídeos",
+      "violando",
       "violar",
       "visto",
       "Você",
@@ -1245,6 +1275,8 @@
       "votation",
       "Votation",
       "votations",
-      "voto"
+      "voto",
+      "zelador",
+      "zeladoras"
     ]
 }
